Add logger and main application structure for Stream Deck plugin
- Implemented a `FileLogger` for logging application events and errors.
- Created a `main.rs` file to initialize the logger and handle application startup.
- Added `plugin.rs` to manage the core functionality of the Stream Deck plugin, including WebSocket communication and event handling.
- Introduced `LaunchArgs` struct to parse command-line arguments for plugin configuration.
- Established a command router to handle various application commands and manage state.
- Set up logging for significant events and errors throughout the application lifecycle.

--- a/icu.veelume.gw2.sdPlugin/manifest.json
+++ b/icu.veelume.gw2.sdPlugin/manifest.json
@@ -5,7 +5,7 @@
   "CodePath": "icu.veelume.gw2.exe",
   "Author": "Veelume",
   "Version": "0.1.0.1",
-  "Description": "Stream Deck plugin for Star Citizen",
+  "Description": "Stream Deck plugin for Guild Wars 2",
   "Icon": "imgs/plugin/category-icon",
   "OS": [
     {
