--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,5 +45,5 @@ windows = { version = "0.61.3", features = [
     "Win32_System_Console",
 ] }
 windows-core = "0.61.2"
-streamdeck-lib = { path = "../streamdeck-lib" }
+streamdeck-lib = { git = "https://github.com/veelume/streamdeck-lib", tag = "v0.1.1" }
 quick-xml = { version = "0.38.1", features = ["serialize"] }
