--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "streamdeck-gw2"
 version = "0.1.0"
 edition = "2024"
+authors = ["veelume"]
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 anyhow = "1.0.98"
