refactor: use environment variable for plugin bundle validation

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -54,10 +54,10 @@ jobs:
       - name: Install Stream Deck CLI
         shell: pwsh
         run: npm install -g @elgato/cli@latest
-        
+
       - name: Validate plugin bundle
         shell: pwsh
-        run: streamdeck validate "icu.veelume.sc-mapper.sdPlugin"
+        run: streamdeck validate "$env:PLUGIN_BUNDLE"
 
       - name: Verify Cargo version matches tag
         shell: pwsh
